--- a/nordismvault/core/templates/add_resource.html
+++ b/nordismvault/core/templates/add_resource.html
@@ -5,7 +5,7 @@
     <title>Add a resource</title>
 </head>
 <body>
-<form action="/your-name/" method="post">
+<form enctype="multipart/form-data" action={% url 'core-add-resource' %} method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
