Add basic user management views etc

--- a/nordismvault/core/templates/add_resource.html
+++ b/nordismvault/core/templates/add_resource.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Add a resource</title>
-</head>
-<body>
+{% extends "header.html"%}
+
+{% block content %}
+
 <form enctype="multipart/form-data" action={% url 'core-add-resource' %} method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
 </form>
-</body>
-</html>
+
+{% endblock %}
