Add some bootstraps

--- a/nordismvault/core/templates/add_resource.html
+++ b/nordismvault/core/templates/add_resource.html
@@ -1,11 +1,21 @@
 {% extends "header.html"%}
+{% load bootstrap5 %}
+{% block bootstrap5_title %}Add resources{% endblock %}
 
-{% block content %}
+{% block bootstrap5_extra_head %}
+<h1>Add Resources top Nordism Vault</h1>
+{% endblock %}
+
+{% block bootstrap5_content %}
 
 <form enctype="multipart/form-data" action={% url 'core-add-resource' %} method="post">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
+    {% bootstrap_form form %}
+    {% buttons %}
+        <button type="submit" class="btn btn-primary">
+          Submit
+        </button>
+    {% endbuttons %}
 </form>
 
 {% endblock %}
