--- a/nordismvault/core/templates/signup.html
+++ b/nordismvault/core/templates/signup.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Signup</title>
-</head>
-<body>
+{% extends 'user_management_base.html' %}
+{% load bootstrap5 %}
+{% block bootstrap5_title %}Login{% endblock %}
+{% block bootstrap5_content %}
 <h1>Signup</h1>
     <form class="site-form" action="{% url 'signup' %}" method="post">
         {% csrf_token %}
         {{form}}
         <input type="submit" value="Signup">
     </form>
-
-</body>
-</html>
+{% endblock %}
