--- a/nordismvault/core/templates/header.html
+++ b/nordismvault/core/templates/header.html
@@ -2,6 +2,13 @@
 {% load bootstrap5 %}
 
 {% block bootstrap5_before_content %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
