--- a/nordismvault/core/templates/home.html
+++ b/nordismvault/core/templates/home.html
@@ -1,7 +1,31 @@
 {% extends "header.html"%}
 
-{% block content %}
-
-Welcome to use Resource Vault!
-
+{% block bootstrap5_content %}
+<div>
+<h1>Welcome to use Resource Vault!</h1>
+</div>
+<div>
+    <h2>Add an image to the Nordism Vault</h2>
+    {% if contributor.user.is_authenticated %}
+        <a href="{% url 'core-add-resource' %}">Upload image</a>
+    {% endif %}
+</div>
+<div id="contributor-info">
+    <h2>Contributor info:</h2>
+    <p>Name</p>
+    {{contributor.user.username}}
+    <p>Verification status:</p>
+    {{contributor.verified}}
+</div>
+<div id="resource-list">
+    <h2>Your contributed images:</h2>
+    {% for resource in resources %}
+    <ul>
+        <li>id: {{ resource.code }}</li>
+        <li>description: {{ resource.description }}</li>
+        <li>added: {{ resource.create_time }}</li>
+        <li>drive id: {{ resource.image.drive_id }}</li>
+    </ul>
+    {% endfor%}
+</div>
 {% endblock %}
