--- a/nordismvault/core/templates/signup.html
+++ b/nordismvault/core/templates/signup.html
@@ -3,7 +3,7 @@
 {% block bootstrap5_title %}Login{% endblock %}
 {% block bootstrap5_content %}
 <h1>Signup</h1>
-    <form class="site-form" action="{% url 'signup' %}" method="post">
+    <form class="site-form" action="{% url 'signup_user' %}" method="post">
         {% csrf_token %}
         {{form}}
         <input type="submit" value="Signup">
