--- a/nordismvault/core/templates/home.html
+++ b/nordismvault/core/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "header.html"%}
 
-{% block bootstrap5_content %}
+{% block content %}
 <div>
 <h1>Welcome to use Resource Vault!</h1>
 </div>
