--- a/nordismvault/core/templates/header.html
+++ b/nordismvault/core/templates/header.html
@@ -1,11 +1,12 @@
-{% extends 'bootstrap.html' %}
-{% load bootstrap5 %}
-{% block bootstrap5_title %}Resource vault{% endblock %}
 
-{% block bootstrap5_before_content %}
+{% load static %}
+
 <head>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'fa/css/all.min.css' %}">
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Resource vault</title>
     {% if user.is_authenticated %}
         <a href="{% url 'logout_user' %}">Logout {{ user.username }}</a>
     {% else %}
@@ -13,4 +14,7 @@
         <a href="{% url 'signup_user' %}">Signup</a>
     {% endif %}
 </head>
+
+{% block content %}
+
 {% endblock %}
