--- a/nordismvault/core/templates/signup.html
+++ b/nordismvault/core/templates/signup.html
@@ -1,7 +1,5 @@
 {% extends 'user_management_base.html' %}
-{% load bootstrap5 %}
-{% block bootstrap5_title %}Login{% endblock %}
-{% block bootstrap5_content %}
+{% block content %}
 <h1>Signup</h1>
     <form class="site-form" action="{% url 'signup_user' %}" method="post">
         {% csrf_token %}
