--- a/nordismvault/core/templates/add_resource.html
+++ b/nordismvault/core/templates/add_resource.html
@@ -9,7 +9,7 @@
 <form enctype="multipart/form-data" action={% url 'core-add-resource' %} method="post">
     {% csrf_token %}
     {{form}}
-        <button type="submit" class="btn btn-primary">
+        <button type="submit" class="btn-primary m-10">
           Submit
         </button>
 </form>
