--- a/nordismvault/core/templates/header.html
+++ b/nordismvault/core/templates/header.html
@@ -1,19 +1,18 @@
 {% load static %}
-
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'fa/css/all.min.css' %}">
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <meta charset="UTF-8">
-    <title>Resource vault</title>
-    {% if user.is_authenticated %}
-        <a href="{% url 'logout_user' %}">Logout {{ user.username }}</a>
-    {% else %}
-        <a href="{% url 'login_user' %}">Login</a>
-        <a href="{% url 'signup_user' %}">Signup</a>
-    {% endif %}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <meta charset="UTF-8">
+    <title>     
+    {% block title %} {% endblock %} | Nordism
+    </title>
 </head>
-
+<body>
 {% block content %}
 
 {% endblock %}
+</body>
+</html>
