--- a/nordismvault/core/templates/home.html
+++ b/nordismvault/core/templates/home.html
@@ -1,31 +1,49 @@
 {% extends "header.html"%}
+{% block title %} Home {% endblock %}
 
 {% block content %}
-<div>
-<h1>Welcome to use Resource Vault!</h1>
-</div>
-<div>
-    <h2>Add an image to the Nordism Vault</h2>
-    {% if contributor.user.is_authenticated %}
-        <a href="{% url 'core-add-resource' %}">Upload image</a>
-    {% endif %}
-</div>
-<div id="contributor-info">
-    <h2>Contributor info:</h2>
-    <p>Name</p>
-    {{contributor.user.username}}
-    <p>Verification status:</p>
-    {{contributor.verified}}
-</div>
-<div id="resource-list">
-    <h2>Your contributed images:</h2>
-    {% for resource in resources %}
-    <ul>
-        <li>id: {{ resource.code }}</li>
-        <li>description: {{ resource.description }}</li>
-        <li>added: {{ resource.create_time }}</li>
-        <li>drive id: {{ resource.image.drive_id }}</li>
-    </ul>
-    {% endfor%}
+<div class="grid grid-cols-1 md:grid-cols-4">
+    <div class="border-r-8 border-red-100">
+        <div>
+            <h1 class="font-bold text-xl m-10 text-gray-700">Nordism Resource Vault</h1>
+        </div>
+        <div class="ml-10 text-sm my-96">
+            <h2>Contributor info:</h2>
+            <p>Name: {{contributor.user.username}}</p>
+            <p>Verification status: {{contributor.verified}}</p> 
+        </div>
+    </div>
+    <div class="col-span-3 bg-red-100">
+        <div id="user_management_widget" class="flex justify-end">
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout_user' %}" class="btn-primary m-10">Logout</a>
+            {% else %}
+                <a href="{% url 'login_user' %}" class="btn-primary m-10">Login</a>
+                <a href="{% url 'signup_user' %}" class="btn-primary m-10">Signup</a>
+            {% endif %}
+        </div>
+        <div class="mb-5 p-10 bg-white rounded-md shadow-md mr-2">
+            <div class="ml-10 bg-gray-200 rounded-md shadow-md p-5">
+                <div id="add_resource_form" class="flex justify-evenly">
+                    <h2>Add an image to the Nordism Vault</h2>
+                    {% if contributor.user.is_authenticated %}
+                    <a href="{% url 'core-add-resource' %}" class="btn-primary">Upload image</a>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        <div class="mb-20 p-10 bg-white rounded-md shadow-md mr-2">
+            <div>
+                <h2 class="pb-5 font-bold">Contibuted resources:</h2>
+            </div>
+            <div>
+                {% for resource in resources %}
+                <div id="img-list" class="p-2 m-2 text-xs font-bold">
+                    <p>Image with description: {{ resource.description }} was added on the {{ resource.create_time }}</p>
+                </div>
+                {% endfor%}
+            </div>   
+        </div>
+    </div>
 </div>
 {% endblock %}
