--- a/nordismvault/core/templates/home.html
+++ b/nordismvault/core/templates/home.html
@@ -24,7 +24,7 @@
         </div>
         <div class="mb-5 p-10 bg-white rounded-md shadow-md mr-2">
             <div class="ml-10 bg-gray-200 rounded-md shadow-md p-5">
-                <div id="add_resource_form" class="flex justify-evenly">
+                <div id="upload_resources" class="flex justify-evenly">
                     <h2>Add an image to the Nordism Vault</h2>
                     {% if contributor.user.is_authenticated %}
                     <a href="{% url 'core-add-resource' %}" class="btn-primary">Upload image</a>
@@ -46,4 +46,28 @@
         </div>
     </div>
 </div>
+<div id="resource-list">
+    <ul>
+        <li v-for="resource in resources">
+            [[ resource.description ]]
+        </li>
+    </ul>
+</div>
+<script>
+    var app = new Vue({
+        delimiters: ["[[", "]]"],
+        el: '#resource-list',
+        data () {
+            return {
+                resources: null
+            }
+        },
+        mounted () {
+            var url = '/api/resource/';
+            axios
+                .get(url)
+                .then(response => (this.resources = response.data))
+        }
+    })
+</script>
 {% endblock %}
