--- a/nordismvault/core/templates/login.html
+++ b/nordismvault/core/templates/login.html
@@ -1,6 +1,8 @@
 {% extends 'user_management_base.html' %}
 {% load static %}
 
+{% block title %} Login {% endblock %}
+
 {% block content %}
 <div class="flex justify-center items-center h-screen">
     <div class="w-1/3">
